<?xml version="1.0"?>
<package format="2">
  <name>orbvi_ros_bridge</name>
  <version>0.1.0</version>
  <description>ROS1 wrapper around the ORBVI Host SDK.</description>

  <maintainer email="dev@huanshizhineng.com">ORBVI Developers</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>livox_ros_driver2</depend>

  <build_depend>libopencv-dev</build_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>
