<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orbvi_ros_bridge</name>
  <version>0.1.0</version>
  <description>ROS wrapper around the ORBVI Host SDK.</description>

  <maintainer email="dev@huanshizhineng.com">ORBVI Developers</maintainer>
  <license>MIT</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>livox_ros_driver2</depend>

  <build_depend>libboost-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <test_depend condition="$ROS_VERSION == 1">gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
